# PyALM

./: format_specifications.md  pyproject.toml  readme.md
Evaluation/: benchmark.py  chat.yaml  function_call_ability.yaml  global_settings.yaml  problem.txt
GLM/: __init__.py  glm.py  llama.py  misc.py  openai.py
doc/: llama_header.c
docs/source/: index.md
docs/source/modules/: Introduction.html  intro.rst  module_alm.md  module_gemini.md  module_llama.md  module_openai.md  module_resources.md
examples/: FunctionIntegration.ipynb  Introduction.ipynb  custom_generator.ipynb
pyalm/: __init__.py  alephalpha.py  alm.py  gemini.py  llama.py  openai.py  resources.py  state.py  system_msg_templates.py
pyalm/RAG/: inspection.ipynb  llm_to_doc.ipynb  modify_knowledge_db.ipynb  rag_db.py
pyalm/chat/: alm_plugin.py  fake_llm_server.py  llm_server.py  multi_llm_server.py  system_msg_templates.py
pyalm/internal/: alm.py  resources.py  state.py
pyalm/models/: alephalpha.py  gemini.py  llama.py  llama_legacy.py  openai.py
tests/: alm_test.py
